Fixing Alt Images

--- a/src/app/shared/user/user.component.html
+++ b/src/app/shared/user/user.component.html
@@ -8,7 +8,8 @@
     width="52"
     height="52"
     (error)="onProfileImgLoadError($event)"
-    src="https://scontent-mad1-1.cdninstagram.com/v/t51.2885-15/fr/e15/s1080x1080/118371230_436264320615021_8487277584230023065_n.jpg?_nc_ht=scontent-mad1-1.cdninstagram.com&_nc_cat=109&_nc_ohc=bWrqQRDJxHcAX-ZdIJB&oh=dc7d6887640019d53f2b303bedd99ad4&oe=5F727A3A"
+    src="https://scontent-mad1-1.cdninstagram.com/v/t51.2885-15/fr/e15/s1080x1080/118371230_436264320615021_8487277584230023065_n.jpg?_nc_ht=scontent-mad1-1.cdninstagram.com&_nc_cat=109&_nc_ohc=bWrqQRDJxHcAX-ZdIJB&oh=dc7d6887640019d53f2b303bedd99ad4&oe=5F727A3A",
+    alt="User Image"
   />
   <fa-icon *ngIf="showUserIcon" [icon]="userWithoutAvatarIcon" size="3x"></fa-icon>
 </div>
