--- a/src/app/shared/unauthorized-page/unauthorized.component.html
+++ b/src/app/shared/unauthorized-page/unauthorized.component.html
@@ -1,7 +1,5 @@
 <div class="container">
-  <img
-    src="https://vignette.wikia.nocookie.net/lossimpson/images/1/16/Guy_Incognito.png/revision/latest?cb=20100401233011&path-prefix=es"
-  />
+  <img src="https://vignette.wikia.nocookie.net/lossimpson/images/1/16/Guy_Incognito.png/revision/latest?cb=20100401233011&path-prefix=es" alt="Incognito Guy"/>
   <h1>We know that you want use Vita,</h1>
   <h1>but Guy Incognito is not allowed here!</h1>
 </div>
