feature: refactored goals home page

--- a/src/app/goals/goal-card/goal-card.component.html
+++ b/src/app/goals/goal-card/goal-card.component.html
@@ -3,13 +3,13 @@
     <div vita-card-header class="vita-goal__header">
       <input formControlName="titleControl" spellcheck="false" />
       <div class="vita-goal__options">
-        <vita-goal-card-menu [goal]="goal" (deleted)="handleOnDeleted($event)" (completed)="handleOnCompleted($event)"></vita-goal-card-menu>
+        <vita-goal-menu [goal]="goal" (deleted)="handleOnDeleted($event)" (completed)="handleOnCompleted($event)"></vita-goal-menu>
       </div>
     </div>
     <textarea vita-card-content formControlName="descriptionControl" spellcheck="false"></textarea>
     <div vita-card-footer class="vita-goal__footer">
+      <vita-goal-aim-date [aimDate]="{ start: goal?.aimDateStart, end: goal?.aimDateEnd}" (aimDateChange)="handleOnAimDateChange($event)"></vita-goal-aim-date>
       <vita-goal-status [goalStatus]="goal.status"></vita-goal-status>
-      <vita-goal-card-aim-date [aimDate]="{ start: goal?.aimDateStart, end: goal?.aimDateEnd}" (aimDateChange)="handleOnAimDateChange($event)"></vita-goal-card-aim-date>
     </div>    
   </vita-card>
 </form>
