--- a/src/app/goals/goal-home/goal-home.component.html
+++ b/src/app/goals/goal-home/goal-home.component.html
@@ -1,3 +1,4 @@
 <div class="goals">
-  <vita-goal-card-list [canCreate]="true" [showCompleted]="true"></vita-goal-card-list>
+  <vita-goal-summary-list></vita-goal-summary-list>
+  <!-- <vita-goal-card-list [canCreate]="true" [showCompleted]="true"></vita-goal-card-list> -->
 </div>
