--- a/src/app/shared/label/label.component.sass
+++ b/src/app/shared/label/label.component.sass
@@ -7,4 +7,6 @@ div.vita-label
     border-radius: 0.25em
     display: inline-flex
     padding: 2px 0.5em
+    white-space: nowrap
+    overflow: hidden
     user-select: none
