--- a/src/app/shared/user/user.component.sass
+++ b/src/app/shared/user/user.component.sass
@@ -5,6 +5,7 @@
     width: 100%
     justify-content: flex-start
     align-items: center
+    margin-right: 0.5em
 
     div.user__container__header
         width: 100%
