--- a/src/app/shared/card/card.component.sass
+++ b/src/app/shared/card/card.component.sass
@@ -6,7 +6,6 @@ div.vita-card
     display: flex
     flex-direction: column
     background-color: $neutral-two    
-    border-radius: 0.5em
 
     div.vita-card__main
         display: flex
@@ -44,6 +43,7 @@ div.vita-card
                 resize: none
                 color: $neutral-one
                 padding-right: 5px
+                padding-top: 0.5em
         
         input, textarea
             &:focus, &:active
