--- a/src/app/shared/virtual-sroll-list/virtual-scroller.component.sass
+++ b/src/app/shared/virtual-sroll-list/virtual-scroller.component.sass
@@ -1,6 +1,13 @@
+@import '../../../styles'   
 div.vita-virtual-scroller
-
     display: flex
     flex-direction: column
     align-content: flex-start
-    padding-bottom: 0.5em
+
+div.vita-virtual-scroller__content 
+    border-top: 1px solid $primary-color
+
+div.vita-virtual-scroller__item
+    padding: 0.75em 1.5em
+    border-bottom: 1px solid $primary-color
+    background-color: $neutral-two    
