feature: fixed forms and input/output for several componetns

--- a/src/app/goals/goal-detail-home/goal-detail-home.component.html
+++ b/src/app/goals/goal-detail-home/goal-detail-home.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="goal" class="goal-detail">
+<div class="goal-detail">
     <div class="goal-detail__main">
-        <vita-goal-detail-card [goal]="goal" (goalChange)="handleOnGoalChange($event)"></vita-goal-detail-card>
+        <vita-goal-detail-card *ngIf="goal" [goal]="goal" (goalChange)="handleOnGoalChange($event)" [readOnly]="false"></vita-goal-detail-card>
     </div>
     <div class="goal-detail__tasks">
-        <vita-goal-tasks [goal]="goal"></vita-goal-tasks>
+        <vita-goal-tasks [goalId]="id"></vita-goal-tasks>
     </div>
 </div>
