--- a/src/app/goals/create-goal-home/create-goal-home.component.html
+++ b/src/app/goals/create-goal-home/create-goal-home.component.html
@@ -1,3 +1,3 @@
-<div>
-    <vita-goal-detail-card [goal]="_goal" (goalChange)="onSubmit($event)"></vita-goal-detail-card>
+<div class="create-goal-home__container">
+    <vita-goal-detail-card [readOnly]="false" [goal]="_goal" (goalChange)="onSubmit($event)"></vita-goal-detail-card>
 </div>
