--- a/src/app/goals/goal-detail-home/goal-tasks/goal-tasks.component.html
+++ b/src/app/goals/goal-detail-home/goal-tasks/goal-tasks.component.html
@@ -1,15 +1,8 @@
-<vita-card>
-    <div vita-card-header class="goal-tasks__header">
-        <span>Tasks</span>
-        <fa-icon *ngIf="!isCreatingTask" [icon]="addIcon" [size]="'sm'" (click)="onClick()"></fa-icon>
-    </div>
-    <div vita-card-content class="goal-tasks__content">
-        <vita-virtual-scroller [items]="tasks" [itemTemplate]="taskTemplate">
-            <ng-template let-item let-index="index" #taskTemplate>
-                <vita-goal-task [task]="item.task"
-                                (taskChange)="handleTaskChange($event, index)"
-                                (delete)="handleDelete(index)"></vita-goal-task>
-            </ng-template>
-        </vita-virtual-scroller>
-    </div>
-</vita-card>
+<vita-task-list *ngIf="_goalTasks"
+                [header]="'Tasks'"
+                [readOnly]="false"
+                [tasks]="_goalTasks"
+                (taskCreated)="handleTaskCreated($event)"
+                (taskChanged)="handleOnTaskChanged($event)"
+                (taskDeleted)="handleOnTaskDeleted($event)">
+</vita-task-list>
