--- a/src/app/tasks/tasks-list/task-list-item/task-list-item.component.sass
+++ b/src/app/tasks/tasks-list/task-list-item/task-list-item.component.sass
@@ -1,10 +1,10 @@
-@import '../../../../../styles'
+@import '../../../../styles'
 
 form
     height: 100%
     width: 100%
 
-div.goal-task__container
+div.task__container
     display: flex
     flex-direction: row
     justify-content: space-between
